--- a/run_pop_pgadmin4/Chart.yaml
+++ b/run_pop_pgadmin4/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: tpctk-fs-pgadmin4
+name: run-pop-pgadmin4
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
