--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,36 @@
-run_pop_kubegres/run-pop-postgres-secret.yaml
-run_pop_pgadmin4/pgadmin-secret.yaml
-run-pop-mysql/mysql-secret.yaml
-run-pop-umami/umami-config.yaml
-run-pop-kube-backend/fastapi-secret.yaml
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
